force-app/src/objects/TR1__BHHV_Bulk_Action_Definition__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Bulk_Action_Limit__c</fullName>
        <label>Bulk Action Limit</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Bulk_Threshold__c</fullName>
        <label>Bulk Threshold</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Chunk_Size__c</fullName>
        <label>Chunk Size</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Handler_Name__c</fullName>
        <label>Handler Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Processed_In_Transaction__c</fullName>
        <label>Processed In Transaction</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Target_Object__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Bulk Action Definition</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bulk Action Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>